--- a/views/index.html
+++ b/views/index.html
@@ -88,16 +88,19 @@
         <!-- projects section  -->
         <div class="row" id="project-section">
             <div class="ui centered grid container">
+                <!-- title column  -->
                 <div class="sixteen wide computer middle aligned column">
                     <p id="project-section-title">Projects</p>
                 </div>
-                <div class="five wide computer sixteen wide mobile column">
+                <!-- vision card  -->
+                <div class="five wide computer only  column">
                     <div class="ui fluid card vision" id="vision-card" >
                         <div class="image">
                             <img src="/images/vision.png">
                         </div>
                     </div>
                 </div>
+                <!-- vision modal  -->
                 <div class="ui modal vision">
                     <i class="close icon"></i>
                     <div class="header">
@@ -132,6 +135,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- books card  -->
                 <div class="five wide computer sixteen wide mobile column">
                     <div class="ui fluid card" id="books-card" >
                         <div class="image">
@@ -139,6 +143,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- books modal  -->
                 <div class="ui modal books">
                     <i class="close icon"></i>
                     <div class="header">
@@ -168,6 +173,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- brew card  -->
                 <div class="five wide computer sixteen wide mobile column">
                     <div class="ui fluid card" id="brew-card" >
                         <div class="image">
@@ -175,6 +181,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- brew modal  -->
                 <div class="ui modal brew">
                     <i class="close icon"></i>
                     <div class="header">
@@ -197,7 +204,7 @@
                         </div>
                     </div>
                     <div class="actions">
-                        <div class="row">
+                        <div class="ui grid">
                             <div class="centered eight wide column">
                                 <a target="_blank" href="https://github.com/Ryanh899/brew-web" >
                                     <div class="ui primary button brewModalButton">View Web App</div>
@@ -211,6 +218,166 @@
                         </div>
                     </div>
                 </div>  
+            </div>
+        </div>
+        <!-- skills section  -->
+        <div class="row" id="skills-section">
+            <div class="ui grid container" id="skills-overlay-container">
+                <div class="middle aligned row">
+                    <div class="sixteen wide column">
+                        <h1 id="skills-title" >Skills</h1>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="sixteen wide column">
+                        <div class="ui secondary inverted pointing menu"  >
+                            <a class="item " data-tab="first" >
+                                <h3 class="skills-menu-text" >Languages</h3>
+                            </a>
+                            <a class="item " data-tab="second">
+                                <h3 class="skills-menu-text" >Back-end Frameworks</h3>
+                            </a>
+                            <a class="item" data-tab="third">
+                                <h3 class="skills-menu-text" >Front-end Frameworks</h3>
+                            </a>
+                            <a class="item " data-tab="fourth">
+                                <h3 class="skills-menu-text" >Front-end Libraries</h3>
+                            </a>
+                            <a class="item " data-tab="fifth">
+                                <h3 class="skills-menu-text" >Databases</h3>
+                            </a>
+                            <a class="item active" data-tab="sixth">
+                                <h3 class="skills-menu-text" >Misc.</h3>
+                            </a>
+                        </div>
+                        <div class="ui tab item" data-tab="first">
+                            <div class="ui grid container">
+                                <div class="four column row">
+                                    <div class="four wide column">
+                                        <div class="fluid image">
+                                            <img class="skills-icons" src="https://cdn.pixabay.com/photo/2017/08/05/11/16/logo-2582748_960_720.png"  >
+                                        </div>
+                                    </div>
+                                    <div class="four wide centered column">
+                                        <div class="fluid image">
+                                            <img class="skills-icons" src="https://3.bp.blogspot.com/-oRSUw_TmO9o/XIb61m88fcI/AAAAAAAAIq0/vnxl2zzsXEQsnHI2fH4GjKu_ZT0urRo4wCK4BGAYYCw/s1600/icon%2Bcss%2B3.png"  >
+                                        </div>
+                                    </div>
+                                    <div class="four wide column">
+                                        <div class="fluid image">
+                                            <img class="skills-icons" src="http://pluspng.com/img-png/logo-javascript-png-html-code-allows-to-embed-javascript-logo-in-your-website-587.png"  >
+                                        </div>
+                                    </div>
+                                    <div class="four wide column">
+                                        <div class="fluid image">
+                                            <img class="skills-icons" src="https://camo.githubusercontent.com/0617f4657fef12e8d16db45b8d73def73144b09f/68747470733a2f2f646576656c6f7065722e6665646f726170726f6a6563742e6f72672f7374617469632f6c6f676f2f6373686172702e706e67"  >
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="ui tab item " data-tab="second">
+                            <div class="ui grid container">
+                                <div class="two column middle aligned row">
+                                    <div class="five wide middle aligned column">
+                                        <div class="fluid image">
+                                            <img class="skills-icons" src="http://pluspng.com/img-png/nodejs-png-node-js-on-light-background-1843.png"  >
+                                        </div>
+                                    </div>
+                                    <div class="eleven wide centered middle aligned column">
+                                        <div class="text" id="express">
+                                            + Express
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="ui tab item" data-tab="third">
+                            <div class="ui grid container">
+                                <div class="centered row">
+                                    <div class="five wide middle aligned column">
+                                        <div class="fluid image">
+                                            <img class="skills-icons" src="/images/react.png"  >
+                                        </div>
+                                    </div>
+                                    <div class="five wide middle aligned column">
+                                        <div class="fluid image">
+                                            <img class="skills-icons" src="https://kaysharbor.com/wp-content/uploads/2018/05/all-about-react-native-apps-776x415.png"  >
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="ui tab item " data-tab="fourth">
+                            <div class="ui grid container">
+                                <div class="four column row">
+                                    <div class="four wide column">
+                                        <div class="fluid image">
+                                            <img class="skills-icons" src="http://pluspng.com/img-png/jquery-logo-png--512.png"  >
+                                        </div>
+                                    </div>
+                                    <div class="four wide centered column">
+                                        <div class="fluid image">
+                                            <img class="skills-icons" src="http://pluspng.com/img-png/bootstrap-png-bootstrap-512.png"  >
+                                        </div>
+                                    </div>
+                                    <div class="four wide column">
+                                        <div class="fluid image">
+                                            <img class="skills-icons" src="https://upload.wikimedia.org/wikipedia/en/thumb/6/6f/Lodash.svg/1200px-Lodash.svg.png"  >
+                                        </div>
+                                    </div>
+                                    <div class="four wide column">
+                                        <div class="fluid image">
+                                            <img class="skills-icons" src="https://www.stickpng.com/assets/images/58482f0ecef1014c0b5e4a7a.png"  >
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="ui tab item " data-tab="fifth">
+                            <div class="ui grid container">
+                                <div class="four column row">
+                                    <div class="five wide column">
+                                        <div class="fluid image">
+                                            <img class="skills-icons" src="http://pngimg.com/uploads/mysql/mysql_PNG1.png"  >
+                                        </div>
+                                    </div>
+                                    <div class="five wide centered column">
+                                        <div class="fluid image">
+                                            <img class="skills-icons" src="https://www.stickpng.com/assets/images/584815fdcef1014c0b5e497a.png"  >
+                                        </div>
+                                    </div>
+                                    <div class="five wide column">
+                                        <div class="fluid image">
+                                            <img class="skills-icons" src="https://i.dlpng.com/static/png/468328_preview.png"  >
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="ui tab item active " data-tab="sixth">
+                            <div class="ui grid container">
+                                <div class="four column row">
+                                    <div class="five wide column">
+                                        <div class="fluid image">
+                                            <img class="skills-icons" src="https://git-scm.com/images/logos/downloads/Git-Logo-2Color.png"  >
+                                        </div>
+                                    </div>
+                                    <div class="five wide centered column">
+                                        <div class="fluid image">
+                                            <img class="skills-icons" src="https://image.flaticon.com/icons/svg/25/25231.svg"  >
+                                        </div>
+                                    </div>
+                                    <div class="five wide column">
+                                        <div class="fluid image">
+                                            <img class="skills-icons" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9a/Visual_Studio_Code_1.35_icon.svg/1200px-Visual_Studio_Code_1.35_icon.svg.png"  >
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
