switched to cdn

--- a/views/index.html
+++ b/views/index.html
@@ -8,13 +8,12 @@
     <title>Ryan Hazzard</title>
     <!-- You MUST include jQuery before Fomantic -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="/semantic/dist/semantic.min.css">
-    <script src="/semantic/dist/semantic.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.7.8/dist/semantic.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.7.8/dist/semantic.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./css/intro-arrow.css">
     <link rel="stylesheet" type="text/css" href="./css/styles.css">
 </head>
-
 <body>
     <!-- page container  -->
     <div class="ui grid container" id="page-container">
@@ -231,7 +230,7 @@
                 <div class="row">
                     <div class="sixteen wide column">
                         <div class="ui secondary inverted pointing menu"  >
-                            <a class="item " data-tab="first" >
+                            <a class="item active" data-tab="first" >
                                 <h3 class="skills-menu-text" >Languages</h3>
                             </a>
                             <a class="item " data-tab="second">
@@ -246,11 +245,11 @@
                             <a class="item " data-tab="fifth">
                                 <h3 class="skills-menu-text" >Databases</h3>
                             </a>
-                            <a class="item active" data-tab="sixth">
+                            <a class="item " data-tab="sixth">
                                 <h3 class="skills-menu-text" >Misc.</h3>
                             </a>
                         </div>
-                        <div class="ui tab item" data-tab="first">
+                        <div class="ui tab item active" data-tab="first">
                             <div class="ui grid container">
                                 <div class="four column row">
                                     <div class="four wide column">
@@ -355,7 +354,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="ui tab item active " data-tab="sixth">
+                        <div class="ui tab item" data-tab="sixth">
                             <div class="ui grid container">
                                 <div class="four column row">
                                     <div class="five wide column">
