--- a/views/css/styles.css
+++ b/views/css/styles.css
@@ -12,7 +12,7 @@
     color: white;
     padding: 2vh;
     width: 100%;
-    position: absolute;
+    /* position: absolute; */
 }
 
 #menu-title-icon {
@@ -46,6 +46,13 @@
 #navbar-inner-grid {
     align-items: center;
 }
+
+#resume-button {
+    color: #7F9AA7;
+    background: #263544;
+    font-family: 'Roboto', sans-serif;
+}
+
 
 /* landing page  */
 
@@ -110,6 +117,7 @@
 
 #project-section {
     height: 100vh;
+    margin-bottom: 50px;
 }
 
 #project-section-title {
@@ -149,8 +157,8 @@
 
 /* skills section  */
 
-#skills-section {
-    height: 100vh;
+#contact-section {
+    height: 90vh;
     background: #7F9AA7;
     /* background-image: url('../images/wave-background.jpg');
     background-position: center; 
@@ -158,16 +166,6 @@
     background-size: cover; */
 }
 
-#skills-title {
-    font-size: 100px;
-    color: white;
-}
-
-#skills-overlay-container {
-        width: 100%; 
-        height: 100vh; 
-        background-color: rgba(0, 0, 0, 0.3); 
-}
 
 .skills-icons {
     height: 150px; 
@@ -194,3 +192,56 @@
     color: #7F9AA7;
     font-size: 75px;
 }
+
+#contact-info-column {
+    background: white;
+    text-align: center;
+    height: 50vh;
+}
+
+#contact-title {
+    font-size: 65px;
+    font-family: 'Roboto', sans-serif;
+    margin-bottom: 2.5%;
+    margin-top: 2.5%;
+}
+
+#contact-info-name {
+    font-size: 30px;
+    font-family: 'Roboto', sans-serif;
+}
+
+#contact-subtitle {
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+}
+
+#contact-email {
+    font-size: 18px;
+    font-family: 'Roboto', sans-serif;
+}
+
+#contact-phone {
+    font-size: 18px;
+    font-family: 'Roboto', sans-serif;
+}
+
+#contact-resume {
+    font-size: 15px;
+    font-family: 'Roboto', sans-serif;
+    color: #7F9AA7;
+}
+
+/* #contact-inner-container {
+    position: relative;
+    max-height: 100%;
+    overflow: hidden;
+} */
+
+@media screen and (max-width: 600px) {
+    #contact-info-column {
+        height: 75vh;
+    }
+  }
+
+
