--- a/views/css/styles.css
+++ b/views/css/styles.css
@@ -185,7 +185,6 @@
 #work-page-title {
     height: 15vh;
     text-align: center;
-    /* display: none; */
 }
 
 #work-page-title-text {
@@ -196,7 +195,7 @@
 #contact-info-column {
     background: white;
     text-align: center;
-    height: 50vh;
+    /* height: 50vh; */
 }
 
 #contact-title {
@@ -232,16 +231,5 @@
     color: #7F9AA7;
 }
 
-/* #contact-inner-container {
-    position: relative;
-    max-height: 100%;
-    overflow: hidden;
-} */
-
-@media screen and (max-width: 600px) {
-    #contact-info-column {
-        height: 75vh;
-    }
-  }
 
 
