contact buttons work

--- a/views/index.html
+++ b/views/index.html
@@ -328,10 +328,20 @@
                         </div>
                         <div class="row">
                             <div class="eight wide centered column">
-                                <i class="huge github icon"></i>
+                                <a
+                            target="_blank"
+                            href="https://github.com/Ryanh899"
+                            >
+                                    <i id="git-icon" class="huge github icon"></i>
+                                </a>
                             </div>
                             <div class="eight wide centered column">
-                                <i class="huge linkedin icon"></i>
+                                <a
+                                target="_blank"
+                                href="https://www.linkedin.com/in/ryan-hazzard/"
+                                >
+                                    <i id="linked-icon" class="huge linkedin icon"></i>
+                                </a>
                             </div>
                         </div>
                     </div>
