changed resume links

--- a/views/index.html
+++ b/views/index.html
@@ -65,7 +65,7 @@
                   <div class="ui buttons">
                     <a
                     target="_blank"
-                    href="https://docs.google.com/document/d/179sKKqYy2Sxgpd_7olH7EXEzCldP6Yzz/edit"
+                    href="https://ryanh899.github.io/resume/"
                     >
                         <button class="ui button">Resume</button>
                     </a>
@@ -321,7 +321,7 @@
                         <div class="sixteen wide column">
                             <a
                             target="_blank"
-                            href="https://docs.google.com/document/d/179sKKqYy2Sxgpd_7olH7EXEzCldP6Yzz/edit"
+                            href="https://ryanh899.github.io/resume/"
                             >
                                 <p id="contact-resume" >Resume</p>
                             </a>
