--- a/views/index.html
+++ b/views/index.html
@@ -125,11 +125,7 @@
           >
             <p id="about-section-title">About</p>
             <div class="text" id="about-text">
-              Ryan Hazzard, 20, born in San Clemente. I am a Full-stack
-              developer proficient with the MERN stack. I am driven to becoming
-              a better developer everyday. I care deeply about writing dry code
-              and am currently looking for a career in which I can contribute
-              and grow as a developer.
+              Ryan Hazzard, 20, born in San Clemente. Full-stack web developer skilled in web technologies (HTML/CSS, Javascript/jQuery, Node.js, Express.js, Passport.js, MySql, Postgresql, MongoDB, React), Cloud (AWS, GCP) and mobile technologies (React Native). I enjoy problem-solving and am achievement-oriented. Looking for a place to work where I can contribute my skills, continue to learn, and grow as a developer.
             </div>
           </div>
         </div>
@@ -196,8 +192,8 @@
             class="five wide computer eight wide tablet sixteen wide mobile column"
           >
             <div class="ui fluid card" id="books-card">
-              <div class="image">
-                <img id="books-image" src="/images/books.ico" />
+              <div class="fluid image">
+                <img  style="height: 325px;"  id="books-image" src="/images/logo-symbol-01.png" />
               </div>
             </div>
           </div>
@@ -205,22 +201,20 @@
           <div class="ui modal books">
             <i class="close icon"></i>
             <div class="header">
-              Book Search
+              Hair Authority Directory
             </div>
             <div class="image content">
               <div class="image">
-                <img src="/images/books.ico" id="vision-modal-image" />
+                <img src="/images/logo-symbol-01.png" id="vision-modal-image" />
               </div>
               <div class="description">
                 <h2 class="modal-description-title">Details</h2>
                 <ul>
                   <li>
-                    Search for a book by Title, Author, or Genre and then save
-                    the books you want to our library.
+                    Full stack JavaScript platform that allows end users to find hair specialists in their area. Providers can sign up on a subscription based plan, get verified, and advertise their services. Subscriptions managed with Zoho Subscriptions API, Hosted on AWS EC2 and S3.
                   </li>
                   <li>
-                    Created with React, Material UI, Express.js, Node.js,
-                    MongoDB, Mongoose, Google Books API.
+                    Technologies: AWS EC2, S3, PostgreSQL, Node.js, Express, JWT based authentication, Zoho Subscriptions API, Semantic UI, Google Maps API, Knex
                   </li>
                 </ul>
               </div>
@@ -229,7 +223,7 @@
               <div class="centered column">
                 <a
                   target="_blank"
-                  href="https://frightful-vampire-68399.herokuapp.com/"
+                  href="https://github.com/Ryanh899/hair-authority-directory-"
                 >
                   <div class="ui primary button modalButton">View</div>
                 </a>
