--- a/views/index.html
+++ b/views/index.html
@@ -125,7 +125,7 @@
           >
             <p id="about-section-title">About</p>
             <div class="text" id="about-text">
-              Ryan Hazzard, 20, born in San Clemente. Full-stack web developer skilled in web technologies (HTML/CSS, Javascript/jQuery, Node.js, Express.js, Passport.js, MySql, Postgresql, MongoDB, React), Cloud (AWS, GCP) and mobile technologies (React Native). I enjoy problem-solving and am achievement-oriented. Looking for a place to work where I can contribute my skills, continue to learn, and grow as a developer.
+              Ryan Hazzard, 20, born in San Clemente. Full-stack web developer skilled in web technologies (HTML/CSS, Javascript/jQuery, Node.js, Express.js, Passport.js, MySQL, PostgreSQL, MongoDB, React), Cloud (AWS, GCP) and mobile technologies (React Native). I enjoy problem-solving and am achievement-oriented. Looking for a place to work where I can contribute my skills while continuing to learn and grow as a developer.
             </div>
           </div>
         </div>
