--- a/views/index.html
+++ b/views/index.html
@@ -315,7 +315,7 @@
                         <div class="sixteen wide column">
                             <a
                             target="_blank"
-                            href="https://ryanh899.github.io/resume/"
+                            href="https://drive.google.com/file/d/1G0k_FcPrq1LwifO6u1XBMuZdz4P536qm/view?usp=sharing"
                             >
                                 <p id="contact-resume" >Resume</p>
                             </a>
